# dbdiff

./: .gitignore  LICENSE  README.md  dbdiff.example.yml  pyproject.toml
src/dbdiff/: __init__.py  cache.py  cli.py  config.py  engine.py  mariadb_container.py  mysql_io.py  row_diff.py  schema_diff.py  sources.py  store.py
src/dbdiff/web/: __init__.py  app.py
src/dbdiff/web/static/: style.css
src/dbdiff/web/templates/: _overview.html  _progress.html  _rows.html  base.html  index.html  run.html  table.html
tests/: test_config.py  test_e2e.py  test_sources.py  test_store.py
tests/fixtures/: base.sql  ignore_updated.yml  new.sql
