[project]
name = "dbdiff"
version = "0.1.0"
description = "Diff two MySQL/MariaDB snapshots (live DSN or .sql.gz on S3) and browse what was inserted, modified, and deleted."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.1",
    "pymysql>=1.1",
    "boto3>=1.35",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
dbdiff = "dbdiff.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbdiff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
